src/pages/bp-list/bp-list.scss
bp-list {
	.list-loading-spinner {
	    text-align: center;
	    margin: 5px;

	    ion-spinner * {
		  fill: rgba(0,0,0,.2);
		}

	}

	&.col-2 .list {
		display: flex;
    	flex-wrap: wrap;

    	.card {
    		width: calc(50% - 15px);
    		margin: 10px 5px 0 10px;
    	}

    	.card:nth-of-type(even) {
			margin-left: 5px;
    	}
	}

	.card {
		box-shadow: none;
		border: none;
		border-bottom: 1px solid #eee;
		overflow: visible;
	}

	.comment-name {
		font-weight: 500;
		margin-right:8px;
		font-size: 1.4rem;
	}

	.card .card-content img {
		margin: 10px -28px;
		width: auto;
		min-width: calc( 100% + 56px);
	}

	@media only screen 
	and (min-width : 768px) {
		.card .card-content img {
			margin: 10px auto;
			width: 100%;
			min-width: auto;
			max-width: 100%;
		}
	}

}

